<resources>
    <string name="app_name">YoungsBook</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">로그인</string>
    <string name="action_sign_up">가입하기</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">사용자명이 유효하지 않습니다.</string>
    <string name="invalid_password">비밀번호는 6글자 이상이어야합니다.</string>
    <string name="login_failed">Login failed</string>
    <string name="auto_login_boolean">Save login information</string>
    <string name="auto_login_id">AutoLoginID</string>
    <string name="auto_login_password">AutoLoginPassword</string>
    <string name="login_id">LoginID</string>
    <string name="login_password">LoginPassword</string>
    <string name="login_name">LoginName</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Delete">삭제</string>
    <string name="Save">저장</string>

    <string name="app_ad_id">ca-app-pub-1871591024314273~5703632445</string>

    <string name="banner_ad_id">ca-app-pub-1871591024314273/7745426135</string>
    <string name="banner_test_ad_id">ca-app-pub-3940256099942544/6300978111</string>

<!--    광고 id 실제값 : ca-app-pub-1871591024314273~5703632445-->
<!--    광고 id 테스트용 : ca-app-pub-3940256099942544/6300978111-->


</resources>