<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.login.LoginActivity">

    <EditText
        android:id="@+id/userid"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:autofillHints="@string/prompt_email"
        android:hint="ID"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints="@string/prompt_password"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userid" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearlayout_checkbox"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/password"
        android:orientation="horizontal"
        android:gravity="center">
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkbox_SaveLoginInfo"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/saveLoginInfo"
            android:text="로그인 정보 저장"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout_Button"
        android:layout_marginTop="30dp"
        android:weightSum="5"
        app:layout_constraintTop_toBottomOf="@+id/linearlayout_checkbox">


        <Button
            android:id="@+id/button_SignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="16dp"
            android:enabled="true"
            android:text="@string/action_sign_up"
            android:backgroundTint="@color/royal_blue"
            android:layout_weight="2"
            app:layout_constraintVertical_bias="0.2" />
        <View
            android:layout_width="1dp"
            android:layout_height="1dp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/button_Login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/royal_blue"
            android:layout_gravity="start"
            android:layout_marginTop="16dp"
            android:enabled="true"
            android:text="@string/action_sign_in"
            android:layout_weight="2"
            app:layout_constraintVertical_bias="0.2" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/linearLayout_Button">
    <Button
        android:id="@+id/button_Test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/royal_blue"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_centerInParent="true"
        android:text="테스트"/>
    </RelativeLayout >


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/appVersion"
        app:layout_constraintBottom_toTopOf="@id/linearLayout_ad_banner"
        app:layout_constraintRight_toRightOf="@id/linearLayout_ad_banner"
        tools:text="ver 1.0.0"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout_ad_banner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:id="@+id/ad_banner"
            ads:adSize="SMART_BANNER"
            ads:adUnitId="@string/banner_ad_id"/>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

</androidx.constraintlayout.widget.ConstraintLayout>