<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:id="@+id/list"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textview_Star"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/s_core_dream7"
            android:singleLine="true"
            android:text="평점"
            android:textSize="25dp" />

        <RatingBar
            android:id="@+id/ratingBar_Star"
            style="@style/Widget.AppCompat.RatingBar.Indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/textview_Star"
            android:isIndicator="false"
            android:numStars="5"
            android:progressTint="@color/light_purple"
            android:rating="0"
            android:stepSize="0.5" />


        <TextView
            android:id="@+id/textview_bookName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ratingBar_Star"
            android:layout_marginTop="10dp"
            android:background="@drawable/customlayout_textview"
            android:fontFamily="@font/s_core_dream4"
            android:singleLine="true"
            android:text="책이름"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/editText_bookName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/textview_bookName"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/textview_bookName"
            android:ellipsize="end"
            android:fontFamily="@font/s_core_dream4"
            android:hint="이곳에 책이름을 입력합니다."
            android:singleLine="true" />



        <LinearLayout
            android:id="@+id/linearLayout_GoalReadDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textview_bookName"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                style="@style/TextView_WidthWrapContent_Border"
                android:text="완독 목표일" />

            <ImageButton
                android:id="@+id/ImageButton_GoalReadDate"
                android:layout_width="@dimen/image_button_width"
                android:layout_height="@dimen/image_button_height"
                android:background="@drawable/b_date" />

            <TextView
                android:id="@+id/textview_GoalReadDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/s_core_dream4"
                android:textSize="15dp"
                tools:text="yyyy-mm-dd" />

            <View
                android:layout_width="1dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <TextView
                style="@style/TextView_WidthWrapContent_Border"
                android:layout_marginLeft="10dp"
                android:text="완독 여부" />

            <CheckBox
                android:id="@+id/checkbox_ReadComplete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />


        </LinearLayout>


        <EditText
            android:id="@+id/editText_bookReview"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/linearLayout_GoalReadDate"
            android:background="@drawable/customlayout_textview"
            android:fontFamily="@font/s_core_dream4"
            android:hint="이곳에 책의 후기를 적어주세요"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText_bookReview"
            android:id="@+id/linearLayout_ButtonLine1"
            android:layout_marginTop="20dp"
            android:weightSum="8"
            android:gravity="center">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_Delete"
                android:background="@drawable/customlayout_button_sub"
                android:textColor="@color/little_light_black"
                android:layout_weight="2"
                android:fontFamily="@font/s_core_dream4"
                android:text="@string/Delete"
                android:layout_marginEnd="50dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_Save"
                android:background="@drawable/customlayout_button_main"
                android:textColor="@color/white"
                android:fontFamily="@font/s_core_dream4"
                android:text="@string/Save"
                android:layout_weight="2"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout_ButtonLine1"
            android:layout_marginTop="20dp"
            android:weightSum="8"
            android:orientation="horizontal"
            android:gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:weightSum="5"
                android:orientation="horizontal">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/button_ScanBarCode"
                    android:background="@drawable/customlayout_button_sub"
                    android:textColor="@color/little_light_black"
                    android:layout_weight="4"
                    android:fontFamily="@font/s_core_dream4"
                    android:text="바코드 스캔"/>

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/button_barcodeTip"
                    android:background="@drawable/ic_info"/>

            </LinearLayout>

        </LinearLayout>


    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >
        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ad_banner"
            ads:adSize="SMART_BANNER"
            ads:adUnitId="@string/banner_ad_id"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>